...
        onRetry={refetch}
      />
    );
  }

  return (
    <SafeAreaView testID="discover_page">
      {isLoading ? (
        <DiscoverPlaceholder />
      ) : (
        <FlatList
          testID="discover_flatlist"
          data={discoverData}
...
